2006-06-07  Hubert Figuiere  <hub@figuiere.net>

	* doc/5d-capture: new documentation on capture for changes below.

2006-06-07  Paul Walmsley <paul@booyaka.com>

	* canon.c, usb.[ch], library.c: When the camera cannot capture an
	image due to a 'photographic failure,' return a gphoto2 error code
	resembling the actual failure code, rather than simply returning a
	generic error.  Tested on the Canon EOS 5D.

	* canon.[ch], usb.[ch]: Adds support for downloading "secondary
	images" -- the JPEGs created when the capture resolution is set to
	the "RAW + JPEG" modes -- for the Canon EOS 5D camera.
	
	* canon.[ch], library.c: Adds remote control over "release
	parameters" -- shutter speed, ISO speed, aperture, resolution,
	autofocus mode -- for the Canon EOS 5D camera. It might work with
	other Canon "class 6" cameras

	* canon.[ch], library.c: Add support for querying the camera's
	shutter speed, ISO speed, aperture, resolution, and focus mode via
	gphoto2's configuration interface.  Tested on the Canon EOS 5D.

	* canon.[ch]: Add canon_int_do_control_dialogue() and
	canon_int_do_control_dialogue_payload().  These functions execute
	a remote capture command on the camera and return the camera's
	response. canon_int_do_control_dialogue_payload() gives the caller
	full control over the payload.  We need these to retrieve and set
	the camera's release parameters.

	* usb.[ch]: Split canon_usb_dialogue() into two functions:
	canon_usb_dialogue_full(), which returns the full camera response
	packet, needed by canon_usb_long_dialogue() (and also by
	canon_int_get_release_params(), later in this patch series).
	
	* canon.c: Add the USB ID for the EOS 5D in PC connection mode.
	
	* canon.[ch]:  
	* library.c: gphoto2's Canon driver currently supports two capture
	modes: canon_int_capture_preview(), which captures a thumbnail to
	the host computer; and canon_int_capture_image(), which captures a
	full-sized image to the camera's drive.  We'd like to control each